# CalibrationDepthPose

./: CMakeLists.txt  README.md
CalibrationDepthPose/: calibCostFunctions.h  calibDepthPose.cxx  calibDepthPose.h  calibParameters.cxx  calibParameters.h  calibTools.cxx  calibTools.h  eigenUtils.h  matchingMatrix.cxx  matchingMatrix.h  matchingTools.cxx  matchingTools.h  pclUtils.cxx  pclUtils.h  threadPool.cxx  threadPool.h
SyntheticDataGenerator/: CMakeLists.txt  cube.vtp  depthMapRenderer.h
data/: dataset.poses  dataset.txt  pc_0000.ply  pc_0001.ply  pc_0002.ply  pc_0003.ply  pc_0004.ply  pc_0005.ply  pc_0006.ply
example/: CMakeLists.txt  calibration_params_example.yaml  depthMapRenderer.cxx  depthMapRenderer.h  exampleUtils.cxx  exampleUtils.h  main.cxx  main_calibrate.cxx  main_calibrate_synthetic_data.cxx  synthetic_calibration_example.yaml
examples/: CMakeLists.txt  calibration_params_example.yaml  exampleUtils.cxx  exampleUtils.h  main_calibrate.cxx  main_calibrate_synthetic_data.cxx  main_multithreading.cxx  synthetic_calibration_example.yaml
syntheticDataGenerator/: CMakeLists.txt  CMakeLists.txt~HEAD  depthMapRenderer.cxx  keyPressInteractorStyle.cxx  keyPressInteractorStyle.h  main.cxx
